fix opening frame not aligned properly

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -40,7 +40,6 @@ $max_font: 40px;
 }
 
 .frame:nth-child(1) .subframe {
-    width: 50%;
     @include sm {
         width: auto;
     }
@@ -157,9 +156,13 @@ $max_font: 40px;
         flex-wrap: wrap;
         flex-direction: column-reverse;
     }
-    justify-content: center;
+    @include sm {
+        justify-content: center;
+    }
+    @include md {
+        justify-content: space-evenly;
+    }
     align-items: center;
-    align-content: center;
 }
 
 .full {
